Changelog
=========

9.0-dev - (unreleased)
----------------------
* Bug fix: added the empty comments within the icons of cross_site_top
  otherwise the i tags close inline and mess up the layout
  [ichimdav refs #17741]

8.9 - (2013-12-10)
------------------
* Change: Improved documentByLine, added warning message style
  when javascript not available. Improved display of dates.
* Feature: content type label is now visible in documentByLine.
  Which types NOT to show can be configured in ZMI > portal_properties >
  > metatypes_labeling_blacklist, default to not show on ATFolder.

8.8 - (2013-12-10)
------------------
* Change: be backward compatible and allow to use <i>-style-icon
  in portalMessage. Added icon for "open for comments".
  [demarant refs #17684, #17633]
* Change: put the icons directly on the portalMessage classes in order for
  the icons to appear when editing text with TinyMCE
  [ichimdav refs #17633]
* Change: removed EoE link.
  [demarant fixes #17581]
* Change: Improved documentation, accordion, icons and removed old code.
  [demarant refs #17555]
* Feature: added collapsed-by-default and non-exclusive classes for
  eea-accordion allowing the accordion to have multiple panels open or have
  them all collapsed to start with
  [ichimdav refs #17555]
* Bug fix: customized tiny_mce.js in order to fix Firefox missing content bug
  [ichimdav #17394]
* Change: use font icons for portal top actions. Improve
  documentation of design elements.
  [demarant refs 15235]
* Bug fix: no longer open multiple tabs when clicking on currently opened
  accordion tab
  [ichimdav refs #17631]
* Bug fix: css fix - bad style for pagination in portal_registry
  [simiamih refs #17558]
* Change: use warning triangle for error/warning portal messages
  [demarant refs #16676]
* Change: use info circle for portal messages with class info
  [ghicaale refs #16676]
* Change: removed custom css and js related to XMPP suite
  [ghicaale refs #17513]