@@ -3,6 +3,8 @@ Changelog
 
 9.0-dev - (unreleased)
 ----------------------
+* Change: changed the default markup of icons to use a span from an i tag
+  [ichimdav refs #17708]
 * Bug fix: added the empty comments within the icons of cross_site_top
   otherwise the i tags close inline and mess up the layout
   [ichimdav refs #17741]
